--- a/src/content/projects/covid-status-dashboard.mdx
+++ b/src/content/projects/covid-status-dashboard.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ithaca Covid Status Dashboard'
+title: 'Covid Status Dashboard'
 subtitle: 'Displaying dynamic Covid data for an at-a-glance look at the most important numbers.'
 demo: 'https://ithaca-covid-status.vercel.app'
 code: 'https://github.com/kieracarman/ithaca-covid-status'
